# email-document-ingestion

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GITHUB_SETUP_SUMMARY.md  LICENSE  Makefile  README.md  README_azure_document_intelligence.md  README_gmail_webhook.md  alembic.ini  cli.py  cli_ocr_workflow.py  client_secret.example.json  docker-compose.yml  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_admin_cli_commands.py  test_document_extraction.py  test_gmail_auth_simple.py  test_gmail_webhook.py  test_ocr_selection_policy.py  test_opensource_ocr.py  validate_cli_task23.py
alembic/: env.py  script.py.mako
api/: __init__.py
api/middleware/: __init__.py  request_logging.py
api/routes/: __init__.py  gmail.py  health.py  ingestion.py  metrics.py  reprocess.py
config/: __init__.py  celery_config.py  redis.conf  settings.py
config/environments/: __init__.py  development.py  production.py  redis.development.conf  redis.production.conf  redis.testing.conf  testing.py
docs/: ocr_workflow_implementation.md  open-source-ocr-implementation.md
examples/: azure_document_intelligence_example.py  gmail_auth_example.py  gmail_label_management_example.py  gmail_message_service_example.py  gmail_watch_example.py  google_document_ai_example.py
models/: __init__.py  base.py  database.py  email.py  exceptions.py  utils.py
scripts/: celery-beat.service  celery-worker.service  celery_beat.py  celery_worker.py  prd.txt  setup_celery_services.sh  setup_redis.sh  task-complexity-report.json
services/: README_gmail_auth.md  README_google_document_ai.md  __init__.py  document_extraction_service.py  email_persistence_service.py  error_logging_service.py  gmail_auth.py  gmail_message_service.py  gmail_service.py  gmail_watch_config.py  google_document_ai_service.py  ocr_document_service.py  ocr_query_service.py  ocr_run_service.py  token_manager.py  token_storage.py
services/blob_storage/: __init__.py  config.py  exceptions.py  factory.py  interface.py  local_storage.py  ocr_storage.py  s3_storage.py  service.py
services/ocr/: __init__.py  azure_document_intelligence.py  config.py  factory.py  interface.py  mistral_document_ai_service.py  opensource_factory.py  paddleocr_service.py  pytesseract_service.py  service.py  textract_service.py  workflow_config.py  workflow_engine.py
services/ocr_engines/: __init__.py  factory.py  google_document_ai_adapter.py
tests/: test_gmail_auth.py  test_gmail_label_management.py  test_logging.py  test_metrics.py  test_metrics_api.py  test_ocr_workflow.py
tests/unit/: test_email_persistence_service.py  test_error_logging_service.py  test_exceptions.py  test_gmail_message_service.py  test_google_document_ai_service.py  test_ocr_factory.py  test_textract_service.py
tests/unit/test_blob_storage/: __init__.py  test_config.py  test_factory.py
tests/unit/test_storage/: README.md  __init__.py  conftest.py  pytest.ini  test_blob_storage.py  test_integration_workflow.py  test_standalone_demo.py
utils/: date_utils.py  logging.py  metrics.py
workers/: __init__.py  base_tasks.py  celery_app.py
